Apache Tez Change Log
=====================

Release 0.9.0: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3376. Fix groupId generation to account for dagId starting with 1.
  TEZ-3359. Add granular log levels for HistoryLoggingService.
  TEZ-3374. Change TEZ_HISTORY_LOGGING_TIMELINE_NUM_DAGS_PER_GROUP conf key name.
  TEZ-3358. Support using the same TimelineGroupId for multiple DAGs.
  TEZ-3357. Change TimelineCachePlugin to handle DAG grouping.
  TEZ-3348. NullPointerException in Tez MROutput while trying to write using Parquet's DeprecatedParquetOutputFormat.
  TEZ-3356. Fix initializing of stats when custom ShuffleVertexManager is used.
  TEZ-3235. Modify Example TestOrderedWordCount job to test the IPC limit for large dag plans.
  TEZ-3337. Do not log empty fields of TaskAttemptFinishedEvent to avoid confusion.
  TEZ-3303. Have ShuffleVertexManager consume more precise partition stats.
  TEZ-1248. Reduce slow-start should special case 1 reducer runs.
  TEZ-3327. ATS Parser: Populate config details available in dag.
  TEZ-3325. Flaky test in TestDAGImpl.testCounterLimits.
  TEZ-3323. Update licese and notice for xml-apis jar. Also update year in notice to 2016.
  TEZ-3223. Support a NullHistoryLogger to disable history logging if needed.
  TEZ-3313. ATSFileParser : Wrong args passed in VersionInfo.
  TEZ-3286. Allow clients to set processor reserved memory per vertex (instead of per container).
  TEZ-3293. Fetch failures can cause a shuffle hang waiting for memory merge that never starts.
  TEZ-3314. Double counting input bytes in MultiMRInput.
  TEZ-3308. Add counters to capture input split length.
  TEZ-3302. Add a version of processorContext.waitForAllInputsReady and waitForAnyInputReady with a timeout.
  TEZ-3291. Optimize splits grouping when locality information is not available.
  TEZ-3305. TestAnalyzer fails on Hadoop 2.7.
  TEZ-3304. TestHistoryParser fails with Hadoop 2.7.